--- a/src/main/resources/templates/query/register.html
+++ b/src/main/resources/templates/query/register.html
@@ -3,6 +3,7 @@
 <head th:replace="_fragment :: header (title=${title})"></head>
 <body>
 <nav th:replace="_fragment :: navigator"></nav>
+<div th:replace="_fragment :: message"></div>
 <div class="container">
     <div class="subject">
         <h1 th:text="${title}">title</h1>
@@ -36,7 +37,11 @@
             <div class="form-group">
                 <label class="col-sm-4 control-label">View</label>
                 <div class="col-sm-4">
-                    <input type="text" name="view" class="form-control input-sm"/>
+                    <select name="view" class="form-control input-sm">
+                        <option value="line">Line chart</option>
+                        <option value="line-summary">Line summary chart</option>
+                        <option value="snowcover">Snowcover chart</option>
+                    </select>
                 </div>
             </div>
             <div class="form-group">
