--- a/src/main/resources/templates/query/detail.html
+++ b/src/main/resources/templates/query/detail.html
@@ -3,6 +3,7 @@
 <head th:replace="_fragment :: header (title=${title})"></head>
 <body>
 <nav th:replace="_fragment :: navigator"></nav>
+<div th:replace="_fragment :: message"></div>
 <div class="container">
     <div class="subject">
         <h1 th:text="${title}">title</h1>
