--- a/src/main/resources/templates/query/list.html
+++ b/src/main/resources/templates/query/list.html
@@ -3,6 +3,7 @@
 <head th:replace="_fragment :: header (title=${title})"></head>
 <body>
 <nav th:replace="_fragment :: navigator"></nav>
+<div th:replace="_fragment :: message"></div>
 <div class="container">
     <!-- #modal-form -->
     <div id="modal-form" class="modal fade" tabindex="-1"
