Add a table view.

--- a/src/main/resources/templates/query/register.html
+++ b/src/main/resources/templates/query/register.html
@@ -38,6 +38,7 @@
                 <label class="col-sm-4 control-label">View</label>
                 <div class="col-sm-4">
                     <select name="view" class="form-control input-sm">
+                        <option value="table">Table</option>
                         <option value="line">Line chart</option>
                         <option value="line-summary">Line summary chart</option>
                         <option value="snowcover">Snowcover chart</option>
