--- a/src/main/resources/templates/query/list.html
+++ b/src/main/resources/templates/query/list.html
@@ -44,6 +44,7 @@
                             <label class="col-sm-2 control-label">View</label>
                             <div class="col-sm-10">
                                 <select name="view" class="form-control input-sm">
+                                    <option value="table">Table</option>
                                     <option value="line">Line chart</option>
                                     <option value="line-summary">Line summary chart</option>
                                     <option value="snowcover">Snowcover chart</option>
