--- a/src/main/resources/templates/query/register.html
+++ b/src/main/resources/templates/query/register.html
@@ -39,6 +39,7 @@
                 <div class="col-sm-4">
                     <select name="view" class="form-control input-sm">
                         <option value="table">Table</option>
+                        <option value="table-reverse">Table reverse</option>
                         <option value="line">Line chart</option>
                         <option value="line-summary">Line summary chart</option>
                         <option value="snowcover">Snowcover chart</option>
