--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -4,7 +4,7 @@
 <body>
 <nav th:replace="_fragment :: navigator"></nav>
 <div th:replace="_fragment :: message"></div>
-<div class="container">
+<div id="dashboard" class="container">
     <div class="subject">
         <h1 th:text="${title}">title</h1>
         <p class="lead"></p>
