--- a/src/main/resources/static/resources/application/css/style.css
+++ b/src/main/resources/static/resources/application/css/style.css
@@ -2,6 +2,10 @@ body {
     padding-top: 80px;
 }
 
+.container {
+    margin-bottom: 2.0em;
+}
+
 .subject {
     padding: 20px 15px;
     text-align: center;
