Add a list page of the cache target.

--- a/src/main/resources/templates/_fragment.html
+++ b/src/main/resources/templates/_fragment.html
@@ -30,6 +30,8 @@
                         <li class="divider"></li>
                         <li><a href="#" th:href="@{/navigator/preference}">Navigator</a></li>
                         <li><a href="#" th:href="@{/dashboard/preference}">Dashboard</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#" th:href="@{/cache/target}">Cache target</a></li>
                     </ul>
                 </li>
             </ul>
